--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
-        <title>Matthew Website</title>
+        <title>Mingxuan YU</title>
         <meta name="author" content="Mingxuan YU">
         <link rel="shortcut icon" href="/img/favicon.png">
         <link rel="stylesheet" href="/css/index.css">
