--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
         <title>Mingxuan YU</title>
         <meta name="author" content="Mingxuan YU">
+        <meta name="description" content="Mingxuan YU, a HKUST undergraduate's GitHub Page">
         <link rel="shortcut icon" href="/img/favicon.png">
         <link rel="stylesheet" href="/css/index.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.0/css/all.min.css">
