--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                     </h2>
                     <p>
                         I am a second-year UG student at the Hong Kong University of Science and Technology(HKUST), majoring in Computer Science.
+                        Currently, I am deepening my knowledge in AI through coursework and projects, exploring topics like machine learning and data analysis.
+                        I’m also preparing for HKUST school of engineering exchange program, eager to broaden my academic and cultural horizons.
                     </p>
                     <p>
                         Feel free to contact me at myuau [at] connect [dot] ust [dot] hk
